--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,1 @@
-<div class="login" fxLayout="row" fxFlexAlign="center center">
-  <mat-card class="login-card p-0 pb-16">
-    <mat-card-header class="primary-bg m-0 p-8 pt-16">
-      <div mat-card-avatar class="header-image"></div>
-      <mat-card-title class="white-fg">Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content class="m-16">
-      <form class="my-form" fxLayout="column">
-        <mat-form-field>
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Email" name="email" />
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" name="password" />
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions class="m-16">
-      <button mat-raised-button (click)="login()" color="primary" class="white-fg">Login</button>
-    </mat-card-actions>
-  </mat-card>
-</div>
-
-<!--
-  <div class="login">
-
-    <div *ngIf="isLoad">
-
-      <app-main *ngIf="isLoggedIn"></app-main>
-
-      <router-outlet *ngIf="!isLoggedIn"></router-outlet>
-
-      <router-outlet *ngIf="isError"></router-outlet>
-
-    </div>
-
-  </div>
--->
+<router-outlet></router-outlet>
