--- a/src/app/errors/404/app404error/app404error.component.html
+++ b/src/app/errors/404/app404error/app404error.component.html
@@ -1,3 +1,18 @@
-<p>
-  app404error works!
-</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>404 Page Not Found!</mat-card-title>
+    <mat-card-subtitle>Are you sure that is what you looking for!</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="../../../../assets/img/404-error.jpg" alt="Something went wrong!!">
+  <mat-card-content>
+    <p>
+      We understands that it looks like lost in the space but don't worry wew are here to find out best for your need.
+      you can go back and retry or go to home page to explore more cool stuff.
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="warn">Back</button>
+    <button mat-raised-button color="warn">Home</button>
+  </mat-card-actions>
+</mat-card>
