--- a/src/app/errors/404/app404error/app404error.component.scss
+++ b/src/app/errors/404/app404error/app404error.component.scss
@@ -1,7 +1,16 @@
-.example-card {
-  max-width: 100%;
-  align-content: center;
-  align-items: center;
+.errorpage {
+  height: 100%;
+  background: url('../../../../assets/img/login_background.jpg');
+  background-size: cover;
+  background-repeat: repeat;
+  *{
+    border-radius: 0;
+  }
+  >.example-card {
+    max-width: 25%;
+    align-content: center;
+    align-items: center;
+  }
 }
 
 .example-header-image {
