--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -11,8 +11,14 @@
     min-width: 400px;
     margin: auto;
   }
+
+  .signup-card-title {
+    font-size: 15px;
+    color: orange;
+  }
 }
 
 button {
   min-width: 100px;
+  
 }
