--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,6 +17,7 @@
             name="email"
             type="email"
             [formControl]="emailControl"
+            required
           />
           <mat-error *ngIf="emailControl.hasError('required')">
             Email is <strong>required</strong>
@@ -33,6 +34,7 @@
             name="password"
             type="password"
             [formControl]="passwordControl"
+            required
           />
           <mat-error *ngIf="passwordControl.hasError('required')">
             Password is <strong>required</strong>
