--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <div
   id="app-main-content"
-  class="main page-layout fullwidth"
+  class="main"
   fxLayout="column"
   fxLayoutGap="72px"
   fxLayoutAlign="start center"
@@ -15,7 +15,7 @@
       <div fxLayout="row" fxLayoutGap="8px" fxLayoutAlign="end center">
         <button mat-icon-button><mat-icon class="white-fg">notifications</mat-icon></button>
         <button mat-button [matMenuTriggerFor]="menu" class="white-fg">
-          <mat-icon>person</mat-icon> {{ user.first_name }} {{ user.last_name }}
+          <mat-icon>person</mat-icon> {{ user?.first_name }} {{ user?.last_name }}
         </button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item>
@@ -30,38 +30,46 @@
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
-  <div class="req-buttons-container" fxFlexAlign="center">
-    <div
-      class="req-buttons"
-      fxLayout="row"
-      fxLayout.sm="column"
-      fxLayout.xs="column"
-      fxLayoutAlign="center center"
-      fxLayoutGap="100px"
-      fxLayoutGap.sm="50px"
-      fxLayoutGap.xs="50px"
-    >
-      <button
-        mat-raised-button
-        class="w-300 h-300"
-        fxLayout="column"
-        fxLayoutAlign="center center"
-        color="warn"
-      >
-        <mat-icon class="h-80 w-80 font-size-80 mb-20 white-fg">touch_app</mat-icon>
-        <div class="font-size-32 white-fg">Manual Request</div>
-      </button>
+  <div class="page-layout simple">
+    <div class="center" appPerfectScrollbar>
+      <div class="content">
+        <div class="req-buttons-container" fxFlexAlign="center" fxFlex>
+          <div
+            class="req-buttons"
+            fxLayout="row"
+            fxLayout.sm="column"
+            fxLayout.xs="column"
+            fxLayoutAlign="center center"
+            fxLayoutGap="100px"
+            fxLayoutGap.sm="50px"
+            fxLayoutGap.xs="50px"
+          >
+            <button
+              mat-raised-button
+              class="w-300 h-300"
+              fxLayout="column"
+              fxLayoutAlign="center center"
+              color="warn"
+              (click)="manualRequest()"
+            >
+              <mat-icon class="h-80 w-80 font-size-80 mb-20 white-fg">touch_app</mat-icon>
+              <div class="font-size-32 white-fg">Manual Request</div>
+            </button>
 
-      <button
-        mat-raised-button
-        class="w-300 h-300"
-        fxLayout="column"
-        fxLayoutAlign="center center"
-        color="accent"
-      >
-        <mat-icon class="h-80 w-80 font-size-80 mb-20 white-fg">gradient</mat-icon>
-        <div class="font-size-32 white-fg">QR Request</div>
-      </button>
+            <button
+              mat-raised-button
+              class="w-300 h-300"
+              fxLayout="column"
+              fxLayoutAlign="center center"
+              color="accent"
+              (click)="qrRequest()"
+            >
+              <mat-icon class="h-80 w-80 font-size-80 mb-20 white-fg">gradient</mat-icon>
+              <div class="font-size-32 white-fg">QR Request</div>
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
