--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -9,59 +9,99 @@
     <mat-card-content class="m-32">
       <form class="my-form" fxLayout="column">
         <mat-form-field>
-            <mat-label>First Name</mat-label>
-            <input matInput placeholder="FirstName" [formControl]="firstNameFormControl"/>
-            <mat-error *ngIf="firstNameFormControl.hasError('required')">
-                First Name is <strong>required</strong>
-            </mat-error>
+          <mat-label>First Name</mat-label>
+          <input matInput placeholder="FirstName" [formControl]="firstNameFormControl" />
+          <mat-error *ngIf="firstNameFormControl.hasError('required')">
+            First Name is <strong>required</strong>
+          </mat-error>
         </mat-form-field>
         <mat-form-field>
-            <mat-label>Last Name</mat-label>
-            <input matInput placeholder="LastName" [formControl]="lastNameFormControl"/>
-            <mat-error *ngIf="lastNameFormControl.hasError('required')">
-                Last Name is <strong>required</strong>
-            </mat-error>
+          <mat-label>Last Name</mat-label>
+          <input matInput placeholder="LastName" [formControl]="lastNameFormControl" />
+          <mat-error *ngIf="lastNameFormControl.hasError('required')">
+            Last Name is <strong>required</strong>
+          </mat-error>
         </mat-form-field>
         <mat-form-field>
           <mat-label>Email</mat-label>
-          <input matInput placeholder="Email" [formControl]="emailFormControl"
-          [errorStateMatcher]="matcher"/>
-          <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-              Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="emailFormControl.hasError('required')">
-              Email is <strong>required</strong>
-            </mat-error>
+          <input matInput placeholder="Email" [formControl]="emailFormControl" />
+          <mat-error
+            *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')"
+          >
+            Please enter a valid email address
+          </mat-error>
+          <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" name="password" type="password" [formControl]="passwordFormControl" required minlength/>
-          <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
-              Password must be at least 3 characters long
-            </mat-error>
-            <mat-error *ngIf="passwordFormControl.hasError('required')">
-              Password is <strong>required</strong>
-            </mat-error>
+          <input
+            matInput
+            placeholder="Password"
+            name="password"
+            type="password"
+            [formControl]="passwordFormControl"
+            required
+            minlength
+          />
+          <mat-error
+            *ngIf="
+              passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')
+            "
+          >
+            Password must be at least 3 characters long
+          </mat-error>
+          <mat-error *ngIf="passwordFormControl.hasError('required')">
+            Password is <strong>required</strong>
+          </mat-error>
         </mat-form-field>
-        <br>
-            <mat-card-title class="signup-card-title">Self rating for Categories</mat-card-title>
-            <mat-label>Flooring</mat-label>
+        <br />
+        <mat-card-title class="signup-card-title">Self rating for Categories</mat-card-title>
+        <mat-label>Flooring</mat-label>
 
-            <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="10" [formControl]="floorFormControl"></mat-slider>
+        <mat-slider
+          thumbLabel
+          [displayWith]="formatLabel"
+          tickInterval="1"
+          min="1"
+          max="10"
+          [formControl]="floorFormControl"
+        ></mat-slider>
 
-            <mat-label>Electrical</mat-label>
+        <mat-label>Electrical</mat-label>
 
-            <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="10" [formControl]="electricalFormControl"></mat-slider>
+        <mat-slider
+          thumbLabel
+          [displayWith]="formatLabel"
+          tickInterval="1"
+          min="1"
+          max="10"
+          [formControl]="electricalFormControl"
+        ></mat-slider>
 
-            <mat-label>Plumbing</mat-label>
+        <mat-label>Plumbing</mat-label>
 
-            <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="10" [formControl]="plumbingFormControl"></mat-slider>
-
+        <mat-slider
+          thumbLabel
+          [displayWith]="formatLabel"
+          tickInterval="1"
+          min="1"
+          max="10"
+          [formControl]="plumbingFormControl"
+        ></mat-slider>
       </form>
     </mat-card-content>
     <mat-card-actions class="m-16 ml-32 mr-32" fxLayout="row" fxLayoutGap="10px">
-      <button mat-raised-button (click)="signUp()" [disabled]="disabled" color="primary" class="white-fg">Sign Up</button>
-
+      <button
+        mat-raised-button
+        (click)="signUp()"
+        [disabled]="disabled"
+        color="primary"
+        class="white-fg"
+      >
+        Sign Up
+      </button>
     </mat-card-actions>
   </mat-card>
 </div>
