--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <mat-card class="login-card p-0 pb-16">
     <mat-card-header class="primary-bg m-0 p-8" fxLayout="row" fxFlexAlign="start center">
       <div mat-card-avatar class="header-image ml-16">
-        <img src="../assets/img/user_icon.png" />
+        <img src="../../assets/img/user_icon.png" />
       </div>
       <mat-card-title class="white-fg mt-8">Login</mat-card-title>
     </mat-card-header>
