--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,7 +8,7 @@
   <mat-toolbar color="primary" class="mat-elevation-z2">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <div fxLayout="row" fxLayoutGap="8px" fxLayoutAlign="start center">
-        <span><img src="../../assets/img/logo-round.png" width="35px"/></span>
+        <span><img src="./assets/img/logo-round.png" width="35px"/></span>
         <span class="white-fg">My Peers</span>
       </div>
 
