dialog notification sizing

--- a/src/app/main/notification/notification.component.html
+++ b/src/app/main/notification/notification.component.html
@@ -19,7 +19,7 @@
       <section>
         <button mat-raised-button type="submit" color="primary" (click)="acceptRequest()">
           <mat-icon class="white-fg s-16 mb-4">check</mat-icon>
-          Accept Request
+          Accept
         </button>
         <button mat-raised-button type="button" color="accent" (click)="cancel()">
           <mat-icon class="white-fg s-16 mb-4">clear</mat-icon>
