--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -31,7 +31,7 @@
     </mat-toolbar-row>
   </mat-toolbar>
   <div class="page-layout simple">
-    <div class="center" appPerfectScrollbar>
+    <div class="center">
       <div class="content">
         <div class="req-buttons-container" fxFlexAlign="center" fxFlex>
           <div
