--- a/src/app/main/requester/requester.component.html
+++ b/src/app/main/requester/requester.component.html
@@ -1,1 +1,7 @@
-<button mat-raised-button color="accent" (click)="finish()">Test</button>
+<div class="page-layout simple">
+  <div class="center">
+    <div class="content">
+      <button mat-raised-button color="accent" (click)="finish()">Test</button>
+    </div>
+  </div>
+</div>
