Reedirected to Main if already logged in

--- a/src/app/errors/500/app500error.component.html
+++ b/src/app/errors/500/app500error.component.html
@@ -13,7 +13,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="warn">Back</button>
-    <button mat-raised-button color="warn">Home</button>
+    <button mat-raised-button routerLink="/main" color="warn">Back</button>
+    <button mat-raised-button color="/main">Home</button>
   </mat-card-actions>
 </mat-card>
