--- a/src/app/errors/404/app404error/app404error.component.html
+++ b/src/app/errors/404/app404error/app404error.component.html
@@ -13,8 +13,8 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="warn">Back</button>
-      <button mat-raised-button color="warn">Home</button>
+      <button mat-raised-button routerLink="/" color="warn">Back</button>
+      <button mat-raised-button routerLink="/" color="warn">Home</button>
     </mat-card-actions>
   </mat-card>
 </div>
