added navigation link

--- a/src/app/errors/500/app500error.component.html
+++ b/src/app/errors/500/app500error.component.html
@@ -14,6 +14,6 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button routerLink="/main" color="warn">Back</button>
-    <button mat-raised-button color="/main">Home</button>
+    <button mat-raised-button routerLink="/main" color="warn">Home</button>
   </mat-card-actions>
 </mat-card>
