--- a/src/app/main/manual-request/manual-request.component.html
+++ b/src/app/main/manual-request/manual-request.component.html
@@ -24,7 +24,7 @@
         <mat-form-field>
           <input
             matInput
-            placeholder="Item Description"
+            placeholder="Request Description"
             name="itemDescription"
             [formControl]="itemDescriptionControl"
             required
