--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,9 +1,7 @@
 <div class="signup" fxLayout="row" fxFlexAlign="center center">
   <mat-card class="signup-card p-0 pb-16">
     <mat-card-header class="primary-bg m-0 p-8" fxLayout="row" fxFlexAlign="start center">
-      <div mat-card-avatar class="header-image ml-16">
-        <img src="../assets/img/user_icon.png" />
-      </div>
+      <div mat-card-avatar class="header-image ml-16"><img src="./assets/img/user_icon.png" /></div>
       <mat-card-title class="white-fg mt-8">Sign Up</mat-card-title>
     </mat-card-header>
     <mat-card-content class="m-32">
