--- a/src/app/main/notification/notification.component.html
+++ b/src/app/main/notification/notification.component.html
@@ -9,10 +9,10 @@
   <div class="h-100-p" fxLayout="column">
     <div mat-dialog-content class="h-100-p">
       <div fxLayout="column" fxLayoutWrap fxLayoutGap="24px" fxLayoutAlign="start">
-        <div><b>Name: </b>{{ data.received.requester_first_name }}</div>
-        <div><b>Item Name: </b>{{ data.received.item_name }}</div>
-        <div><b>Item Description: </b>{{ data.received.item_description }}</div>
-        <div><b>Item Category: </b>{{ data.received.item_category }}</div>
+        <div><b>Name: </b>Jum</div>
+        <div><b>Item Name: </b>Refrigerator</div>
+        <div><b>Item Description: </b>Buying the right one</div>
+        <div><b>Item Category: </b>Electricity</div>
       </div>
     </div>
     <mat-dialog-actions align="end">
